k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: 479699168320.dkr.ecr.ap-northeast-2.amazonaws.com/chaing-backend:145
          ports:
            - containerPort: 8080
